# presentation-validator

./: .gitignore  .travis.yml  CHANGES.md  Dockerfile  README.md  action.yml  foot.html  head.html  iiif-presentation-validator.py  index.html  pyproject.toml  requirements.txt  runDocker.sh  setup.py  tox.ini  validator.py
.ebextensions/: packages.config  pip.config  wsgi.config
.github/deployment/: task-definition.json
.github/workflows/: PyPi.yml  TestPyPi.yml  check-jsonschema.yml  deploy.yml  test.yml
assets/: LICENCE.md
fixtures/: README.md
fixtures/3/: accompanyingCanvas.json  annoPageInCollection.json  anno_pointselector.json  anno_source.json  annotation_full.json  broken_collection.json  broken_embedded_annos.json  broken_service.json  broken_simple_image.json  choice.json  collection.json  collection_of_canvases.json  collection_with_extra_properties.json  content_state.json  full_example.json  navPlace.json  non_cc_license.json  old_format_label.json  point_selector.json  publicdomain.json  range_range.json  rights_lang_issues.json
fixtures/3/invalid/: broken_choice.json
fixtures/3/valid/: 0306-manifest-link-annos.json  0306-manifest-link-manifest.json  annoPage.json  annoPageMultipleMotivations.json  anno_source.json  collection_of_collections.json  extension_anno.json  multi_bodies.json  old_cc_license.json  (+4 more)
implementations/manifest-factory/: README.md  build-collection-from-directory.py  build-from-directory.py  factory.py  factory_11.py  loader.py  test_loader.py
implementations/mongorest/: kule.py  readme.md
implementations/validator/: head.html  validator.py
presentation_validator/: __init__.py  cli.py  enum.py  model.py  validator.py  web.py
presentation_validator/v3/: error_processor.py  schemavalidator.py
presentation_validator/v4/: check_refs.py  unique_ids.py  validation4.py
schema/: error_processor.py  iiif_3_0.json  schemavalidator.py  unique_ids.py  validation4.py
schema/v4/: AccompanyingCanvas.json  AmbientAudio.json  AmbientLight.json  AnnoTarget.json  Annotation.json  AnnotationBody.json  AnnotationCollection.json  AnnotationCollectionRef.json  AnnotationPage.json  AnnotationPageRef.json  AnnotationRef.json  Audio.json  AudioTypes.json  Body.json  Camera.json  CameraTypes.json  Canvas.json  CanvasRef.json  Choice.json  Collection.json  CollectionRef.json  Container.json  Context.json  CssSelector.json  DataPositionSelector.json  DirectionalLight.json  External.json  FragmentSelector.json  Homepage.json  HttpRequestState.json  ImageAPISelector.json  ImageBasedLight.json  Intensity.json  Light.json  LightTypes.json  LookAt.json  Manifest.json  ManifestRef.json  NavPlace.json  OrthographicCamera.json  (+39 more)
static/css/: main.css
tests/: test_cli.py  test_schema.py  test_validator.py  test_web.py
translators/chronam/: manifest.py  prezi_shim.py
translators/complex/: m804-factory.py
translators/contentdm/: cdm-pmh-harvester.py
translators/museums/: britishmuseum-crm-factory.py  fitzwilliam.py  vam.py  ycba-crm.py
translators/veridian/: prezi_shim.py
translators/wales/: build_static.py  list_shim.py
translators/wikimedia/: .gitignore  commons.py
validator/: foot.html  validator.py
views/: index.html
(+14 files in other folders)
