[project]
name = "iiif-presentation-validator"
dynamic = ["version"]
description = "Validator for the IIIF Presentation API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "bottle>=0.12.9",
  "iiif_prezi>=0.2.2",
  "jsonschema",
  "jsonpath_rw",
  "requests",
  "Pillow>=3.2.0; python_version >= '3.6'",
  "referencing>=0.37.0",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Multimedia :: Graphics :: Graphics Conversion",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Environment :: Web Environment",
]

[project.urls]
Homepage = "https://github.com/IIIF/presentation-validator"

[project.scripts]
iiif-validator = "presentation_validator.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm>=9.2.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["presentation_validator*", "schema*"]

[tool.setuptools.package-data]
schema = ["**/*.json"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:webob.*"
]

[tool.setuptools_scm]
version_file = "presentation_validator/_version.py"
fallback_version = "main"

[dependency-groups]
dev = [
  "build",
  "coverage",
  "pytest>=9.0.2",
  "webtest>=3.0.7",
]
